Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="Pacotes de viagem personalizados com a Thynk Travel, saindo do Rio. Explore destinos incríveis e viva experiências inesquecíveis!" />
-  <meta name="author" content="Jefferson Alves" />
+  <meta name="author" content="Jefferson Domiciano" />
   <link rel="shortcut icon" href="/iconLogo.png" />
   <title>Thynk Travel</title>
 </head>
